src/index.css
*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1.5;
  letter-spacing: 2px;
}

h1 {
  font-size: 3em;
}

h2 {
  font-size: 2.5em;
}

h3 {
  font-size: 1.5em;
}

section {
  width: 100%;
  padding: 50px 30px;
}

section:nth-child(odd) {
  background-color: #f2f3f4;
}

main p, section p {
  font-size: 1.5em;
}

@media only screen and (min-width: 600px) {
  h1 {
    font-size: 4em;
  }

  main p, section p {
    font-size: 2em;
  }
}

@media only screen and (min-width: 1100px) {
  h1 {
    font-size: 6em;
  }
}

.kanzleiLogo {
  width: 150px;
}

@media only screen and (min-width: 600px) {
  .kanzleiLogo {
    width: 250px;
  }
}

main {
  width: 100%;
  height: calc(100vh - 90px);
  min-height: 400px;
  position: relative;
  overflow: hidden;
}

.mainBackground {
  object-position: top;
  object-fit: cover;
  width: 100%;
  height: 100%;
  position: absolute;
}

.mainContent {
  position: absolute;
  padding: 30px;
  color: white;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.mainContent__link {
  width: 100%;
  margin: 40px 0 0 0;
  text-align: center;
}

@media only screen and (min-width: 1000px) {
  .mainContent__link {
    text-align: right;
  }
}

.mainContent__link a {
  text-decoration: none;
  padding: 15px 25px;
  color: white;
  border: 2px solid white;
  border-radius: 31px;
  font-weight: 900;
  font-size: 1.5em;
}

.contactLink {
  text-decoration: none;
}

.contactLink span {
  display: none;
}

.contactLink img {
  display: inline-block;
  width: 45px;
}

@media only screen and (min-width: 800px) {
  .contactLink {
    padding: 15px 25px;
    color: black;
    border: 2px solid black;
    border-radius: 28px;
  }

  .contactLink span {
    display: inherit;
  }
  
  .contactLink img {
    display: none;
  }

  .mainContent {
    max-width: 1000px;
  }
}

#hamburger-icon {
  margin: auto 0;
  display: none;
  cursor: pointer;
}

#hamburger-icon div {
  width: 35px;
  height: 3px;
  background-color: black;
  margin: 6px 0;
  transition: 0.4s;
}

.open .bar1 {
  -webkit-transform: rotate(-45deg) translate(-6px, 6px);
  transform: rotate(-45deg) translate(-6px, 6px);
}

.open .bar2 {
  opacity: 0;
}

.open .bar3 {
  -webkit-transform: rotate(45deg) translate(-6px, -8px);
  transform: rotate(45deg) translate(-6px, -8px);
}

.open .mobile-menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

.mobile-menu {
  display: none;
  position: absolute;
  top: 90px;
  left: 0;
  height: calc(100vh - 90px);
  min-height: 400px;
  width: 100%;
  background-color: white;
  z-index: 1;
}

.mobile-menu li {
  margin-bottom: 10px;
  list-style: none;
  padding: 20px;
}

.mobile-menu li a {
  text-decoration: none;
  color: black;
}

@media only screen and (max-width: 1380px) {
  header nav {
    display: none;
  }

  #hamburger-icon {
    display: block;
  }
}

.references {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.references__headline, .law__headline, .company__headline, .contact__headline {
  width: 100%;
  text-align: center;
}

.references__headline h2, .law__headline h2, .company__headline h2, .contact__headline h2 {
  margin-bottom: 30px;
}

.reference {
  width: 100%;
  max-width: 1200px;
}

.reference__author {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  font-size: 1.2em;
}

.law__elements {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.law__elements-item {
  width: 100%;
  margin: 0 0 70px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.law__elements-item img {
  width: 7em;
  height: 7em;
  margin: 0 0 30px 0;
}

.law__elements-description {
  width: 100%;
  display: flex;
  justify-content: center;
  text-align: center;
}

.law__elements-description p {
  max-width: 1200px;
}

@media only screen and (min-width: 1000px) {
  .law__elements-item {
    width: 30%;
  }
}

.company__content {
  width: 100%;
  display: flex;
  flex-wrap: wrap-reverse;
  justify-content: space-between;
}

.company__content-image, .company__content-text {
  width: 100%;
}

.company__content-text p {
  margin: 0 0 35px 0;
}

.company__content-image img {
  width: 100%;
  margin: 0 0 30px 0;
}

@media only screen and (min-width: 1200px) {
  .company__content-image, .company__content-text {
    width: 45%;
  }

  .company__content-text {
    margin: 0 20px 0 0;
  }

  .company__content-image img {
    margin: 0;
  }

  .company__content {
    align-items: center;
  }
}

.contact__content {
  display: flex;
  flex-direction: column;
}

.contact__content-item {
  display: flex;
}

.contact__content-item p:first-child {
  font-weight: bold;
  margin: 0 35px 0 0;
  min-width: 113px;
}

